--- a/elestio.yml
+++ b/elestio.yml
@@ -44,6 +44,16 @@ environments:
     value: "postgres"
   - key: "POSTGRES_PORT"
     value: "5432"
+  - key: "MAIL_MAILER"
+    value: "smtp"
+  - key: "MAIL_HOST"
+    value: "172.17.0.1"
+  - key: "MAIL_PORT"
+    value: "25"
+  - key: "MAIL_FROM_ADDRESS"
+    value: "[DOMAIN]@vm.elestio.app"
+  - key: "MAIL_FROM_NAME"
+    value: "Hi.Events"
 
 config:
   runTime: "dockerCompose"
