--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "172.17.0.1:13336:80"
     environment:
       - VITE_FRONTEND_URL=https://${DOMAIN}
+      - APP_FRONTEND_URL=https://${DOMAIN}
       - VITE_API_URL_CLIENT=https://${DOMAIN}/api
       - VITE_API_URL_SERVER=http://localhost:80/api
       - VITE_STRIPE_PUBLISHABLE_KEY=${VITE_STRIPE_PUBLISHABLE_KEY}
